[package]
name = "hashlife"
version = "0.0.0"
authors = ["Nicholas Buckeridge <bucknich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2"
cached = "0.20.0"

[dev-dependencies]
tui = "0.12"
termion = "1.5"
itertools="0.9"
argh = "0.1"

[[example]]
name = "demo"
path = "examples/demo.rs"
