[package]
name = "hashlife"
description = "Hashlife implementaion for the game of life."
version = "0.0.0                                                                                          "
authors = ["Nicholas Buckeridge <bucknich@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["conway", "game-of-life", "hashlife"]
homepage = "https://github.com/mcqueen256/hashlife"
repository = "https://github.com/mcqueen256/hashlife"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.20.0"
itertools="0.9"
regex = "1.4.1"

[dev-dependencies]
tui = "0.12"
termion = "1.5"
argh = "0.1"

[[example]]
name = "demo"
path = "examples/demo.rs"
